--- a/main.html
+++ b/main.html
@@ -13,11 +13,13 @@
 
 </body>
 	<table>
+		<tread>
 		<tr>
 			<th>Item</th>
 			<th>Price</th>
 			<th>Quantity</th>
 		</tr>
+		</tread>
 		<tr>
 			<th>Banana</th>
 			<td>1.00</td>
