--- a/main.html
+++ b/main.html
@@ -13,13 +13,14 @@
 
 </body>
 	<table>
-		<tread>
+		<thead>
 		<tr>
 			<th>Item</th>
 			<th>Price</th>
 			<th>Quantity</th>
 		</tr>
-		</tread>
+		</thead>
+		
 		<tr>
 			<th>Banana</th>
 			<td>1.00</td>
